--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,8 +22,9 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"],
-      "@components/*": ["src/components/*"],
       "@lib/*": ["src/lib/*"],
+      "@helpers/*": ["src/lib/helpers/*"],
+      "@components/*": ["src/app/[lang]/components/*"],
       "@public/*": ["public/*"]
     },
     "typeRoots": ["./node_modules/@types", "./src/types"]
